# zero-to-production-rust

./: .dockerignore  Cargo.toml  Dockerfile  app.yaml  readme.md  sqlx-data.json
.cargo/: config.toml
.github/workflows/: rust.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230624194008_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  detail_post.rs  domain.rs  lib.rs  main.rs  startup.rs  thread_pool.rs
src/domain/: domain.rs  mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: get_all.rs  health_check.rs  mod.rs  subscriptions.rs  upload.rs
tests/: test_api.rs
