[package]
name = "zero_to_production_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero_to_production_in_rust"

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.18"
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.3.4", features = ["v4"] }
config = "0.13.3"