[package]
name = "zero_to_production_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero_to_production_in_rust"

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.18"
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.3.4", features = ["v4"] }
config = "0.13.3"
chrono = "0.4.26"
env_logger = "0.10.0"
log = "0.4.19"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
once_cell = "1.17.2"