[package]
name = "zero_to_production_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero_to_production_in_rust"

[dependencies]
actix-web = "4.4.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.192", features = ["derive"]}
sqlx = { version = "0.7.2", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.5.0", features = ["v4"] }
config = "0.13.3"
chrono = "0.4.31"
env_logger = "0.10.1"
log = "0.4.20"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.9"
secrecy = { version = "0.8.0", features = ["serde"] }
unicode-segmentation = "1.10.1"
futures = "0.3.29"
serde_json = "1.0.108"
validator = "0.16.1"
[dev-dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
claims = "0.7.1"
once_cell = "1.18.0"
fake = "2.9.1"